--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
 {% autoescape true %}
-{% set navigation_bar = [
-    ('/', 'home', 'Home'),
-    ('/products/', 'products', 'Products'),
-    ('/contactus/', 'contactus', 'Contact'),
-    ('/enquiry/', 'enquiry', 'Enquiry'),
-] -%}
-{% set active_page = active_page|default('home') -%}
 <html>
     <head>
         <title>{{ title }}</title>
@@ -20,7 +13,7 @@
                 <nav>
                 <ul class="menu">
                     {% for href, id, caption in navigation_bar %}
-                    <li{% if id == active_page %} class="active" {% endif %}><a href="{{href|e}}">{{caption|e}}</a>
+                    <li{% if id == active_pageID %} class="active" {% endif %}><a href="{{href|e}}">{{caption|e}}</a>
                     </li>
                     {% endfor %}
                 </ul>
