About us page updated

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,11 +6,11 @@ Standard Dies and Tools, founded in 1980, is an industry leader in the manufactu
 </p>
 
 <p>
-Our manufacturing facilities boast state-of-the-art equipment for producing and verifying the accuracy of the highest quality and most consistent Tungsten Carbide wire drawing dies. Our manufacturing flexibility combined with our large and diverse inventory allows us to offer short run, high volume, customized and standard products delivered with the shortest lead times in the industry.
+Our manufacturing facilities boast state-of-the-art equipment for production and verification of highest quality and most consistent Tungsten Carbide wire drawing dies. Our manufacturing flexibility combined with our large and diverse inventory allows us to offer short run, high volume, customized and standard products delivered with the shortest lead times in the industry.
 </p>
 
 <p>
-Our capabilities include operations such as Turning, Precision ID Grinding and Center less OD Grinding, Lapping, Polishing, and Finishing. Our products employ technological innovations, in the form of superior materials, advanced coatings and innovative design solutions for today’s ever changing manufacturing trends and demands.
+Our capabilities include operations such as Turning, Precision ID Grinding and Center less OD Grinding, Lapping, Polishing, and Finishing.
 </p>
 
 <p>
@@ -18,10 +18,10 @@ Our thirty plus years of field experience enables us to provide utmost satisfact
 </p>
 
 <p>
-Since our inception more than 30 years ago, we have let quality be our single guiding principal. Our policy and goal is to do it right the first time and to continually supply tools and materials that always exceed customer's expectation.
+Since our inception more than 30 years ago, we have let quality be our single guiding principle. Our policy and goal is to do it right the first time and to continually supply tools and materials that always exceed customer's expectation. Our client feedback is our biggest marketing tool.
 </p>
 
 <p>
-Our technical experience is available to all of our customers in the planning and implementation of their tooling requirements.
+Our technical expertise is available to all of our customers in all the phases of the production.
 </p>
 {% endblock %}
